--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,9 +9,9 @@ theme:
 
 nav:
   - About: index.md
-
   - Changelog: change.md
   - Compatibility: compat.md
+  - Download: download.md
   - Enable or Disable Features: endis.md
   - Event Trigger: event_trigger.md
   - Features: 
